<resources>
    <string name="app_name">My Application</string>
    <string name="textview1">TextView</string>
    <string name="this_my_layout_project">this_my_layout_project</string>
    <string name="button1">Button</string>
    <string name="button_3">Button 3</string>
    <string name="button_2">Button 2</string>
    <string name="button_1">Button1</string>
    <string name="checkbox3">CheckBox3</string>
    <string name="checkbox1">CheckBox1</string>
    <string name="checkbox4">CheckBox4</string>
    <string name="checkbox5">CheckBox5</string>
    <string name="checkbox6">CheckBox6</string>
    <string name="checkbox2">CheckBox2</string>
    <string name="todo">TODO</string>
    <string name="todo3">TODO</string>
    <string name="Todo1">TODO</string>
</resources>